--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                 </div>
                 <ul class="main-list">
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
-                    <li class="dropdown-btn" data-id="one"><h3>À Propos</h3>
-                        <div class="sub-list-wrapper expand-dropdown" id="one">
+                    <li class="dropdown-btn" data-id="one">
+                        <h3>
+                            <a href="#" class="test">À Propos</a>
+                        </h3>
+                        <div class="sub-list-wrapper" id="one">
                             <ul class="sub-list">
                                 <li>
                                     <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
@@ -160,12 +163,14 @@
             <ul class="opinion-wrapper">
                 <li class="opinion-card" data-animation="showUp">
                     <h3 class="opinion-title">Design Web</h3>
-                    <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne idée
+                    <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne
+                        idée
                         de ce que leur site va donner quand il sera déployé.</p>
                 </li>
                 <li class="opinion-card" data-animation="showUp">
                     <h3 class="opinion-title">Développement Web</h3>
-                    <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions
+                    <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des
+                        normes&nbsp;/&nbsp;conventions
                         des langages&nbsp;(sémantique en HTML).</p>
                 </li>
                 <li class="opinion-card" data-animation="showUp">
