Deleted a tag from dropdown

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
                     <li class="dropdown-btn" data-id="one">
                         <h3>
-                            <a href="#" class="test">À Propos</a>
+                            À Propos
                         </h3>
                         <div class="sub-list-wrapper" id="one">
                             <ul class="sub-list">
