--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <ul class="main-list">
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
-                    <li class="dropdown-btn" data-id="one">
+                    <li class="dropdown-btn expand-dropdown" data-id="one">
                         <h3>
                             À Propos
                         </h3>
