--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </div>
                 <ul class="main-list">
                     <li><h3><a class="main-link" href="#header" title="Aller vers l'accueil">Accueil</a></h3></li>
-                    <li class="dropdown-btn expand-dropdown" data-id="one">
+                    <li class="dropdown-btn" data-id="one">
                         <h3>
                             À Propos
                         </h3>
-                        <div class="sub-list-wrapper" id="one">
+                        <div class="sub-list-wrapper expand-dropdown" id="one">
                             <ul class="sub-list">
                                 <li>
                                     <a href="#coordonnees" class="sub-list-link" title="Aller vers mes coordonnées">Coordonnées</a>
