--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
             <ul class="list-info base-container">
                 <li id="myProfil" class="img-wrapper">
                     <figure class="main-img-wrapper">
-                        <img class="main-img" src="./img/main-about.jpg"
+                        <img class="main-img" src="./img/cv-site.jpg"
                              alt="Image d'un MacBook Pro sur une table blanche avec un livre noir et un stylo à coté"
-                             width="500" height="666" data-animation="showUp">
+                             width="474" height="632" data-animation="showUp">
                         <figcaption class="hidden">Un MacBook Pro sur une table avec un livre et un stylo</figcaption>
                     </figure>
                     <figure>
@@ -146,7 +146,7 @@
                     <p data-animation="showUp">Depuis mon adolescence,&nbsp;je suis passionné de web et de
                         programmation.&nbsp;Ma détermination m’incite à
                         persévérer sur chaque projet,&nbsp;sans jamais abandonner.</p>
-                    <a class="about-link" href="#" data-animation="showUp">En savoir plus sur moi</a>
+                    <a class="about-link" href="#opinion" data-animation="showUp">En savoir plus sur moi</a>
                 </li>
             </ul>
         </article>
