--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <a class="top-btn" href="#header">Haut de la page</a>
 <header id="header">
-    <h1 class="hidden">Loïc Delanoë,&nbsp;Développeur web</h1>
+    <h1 class="hidden">Test</h1>
     <ul class="header-list">
         <li>
             <h2 class="navbar-title"><a href="index.html" title="Loïc D. - CV">Loïc D.</a></h2>
