Fix burger animation, add favicon

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Space+Grotesk:wght@300..700&display=swap"
           rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link rel="stylesheet" href="./src/scss/main.scss">
-    <title>Loïc D. - SCSS</title>
+    <title>Loïc D. - Développeur Web</title>
 </head>
 <body>
 <header>
@@ -274,9 +275,9 @@
             <form id="footerContact" action="#" method="POST">
                 <h3>Envoyez moi un mail&nbsp;!</h3>
                 <label for="footerName">Nom</label>
-                <input type="text" name="name" id="footerName" placeholder="Votre nom...">
+                <input type="text" name="name" id="footerName" placeholder="Votre nom..." autocomplete="true">
                 <label for="footerEmail">Email</label>
-                <input type="email" name="email" id="footerEmail" placeholder="Votre mail...">
+                <input type="email" name="email" id="footerEmail" placeholder="Votre mail..." autocomplete="true">
                 <button type="submit" class="cta primary">Contactez moi</button>
             </form>
         </li>
