--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <li>
             <h3>Coordonnées</h3>
             <address itemscope itemtype="https://schema.org/PostalAddress">
-                <span itemprop="streetAddress">Rue Hullos,&nbsp;69</span>,
+                <span itemprop="streetAddress">Rue Coquelicot,&nbsp;10</span>,
                 <span itemprop="postalCode">4000</span>
                 <span itemprop="addressLocality">Liège</span>
             </address>
